<resources>

    <string name="app_name">K-MEMORIES</string>

    <!--TEXTOS DA ACTIVITY LOGIN-->
    <string name="esqueceu_a_senha">Esqueceu a senha ?</string>
    <string name="ainda_n_o_tem_uma_conta">Ainda não tem uma conta ?</string>
    <string name="crie_agora">Crie agora</string>
    <string name="senha">Senha</string>
    <string name="acessar">Acessar</string>
    <string name="e_mail">E-mail</string>

    <!-- TEXTOS USADOS NA TELA DE CADASTRO DE USUÁRIO -->
    <string name="nome">Nome</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="termos_de_uso">Termos de uso</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>